@@ -68,7 +68,7 @@ read_gm_interval: 10
 // after 8 hours of inactivity).
 // 0 disables (default). Enable it only if you are getting
 // "MySQL server has gone Away" errors due to lack of activity on your server
-//connection_ping_interval: 3
+connection_ping_interval: 7
 
 // MySQL Login SQL Server
 login_server_ip: 127.0.0.1
